[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Utils/ContextMenu.gd" type="Script" id=1]

[node name="ContextMenu" type="PopupPanel"]
margin_left = -140.0
margin_top = 24.0
margin_right = -34.0
margin_bottom = 100.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="BtnNewCard" type="Button" parent="VBoxContainer"]
margin_right = 98.0
margin_bottom = 20.0
text = "New Card"

[node name="BtnNewFolder" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 98.0
margin_bottom = 44.0
text = "New Folder"

[node name="BtnSearchAll" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 98.0
margin_bottom = 68.0
text = "Search All"

[connection signal="pressed" from="VBoxContainer/BtnNewCard" to="." method="_on_BtnNewCard_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnNewFolder" to="." method="_on_BtnNewFolder_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnSearchAll" to="." method="_on_BtnSearchAll_pressed"]
